--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guess My Number</title>
+    <title>Guess My Number!</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -43,10 +43,10 @@
           <p class="message" id="messageId">Start guessing...</p>
           <img src="assets/game-checking-info.png" />
         </div>
-        <div class="message2">
+        <!-- <div class="message2">
           <p class="message2">nama</p>
           <img src="assets/game-checking-info.png" />
-        </div>
+        </div> -->
       </div>
 
       <!-- pop up -->
@@ -54,7 +54,7 @@
         <div class="score-board">
           <p class="score-akhir">Score: <span id="scoreAkhir">20</span></p>
           <div class="leader-board">
-            <ol>
+            <ol id="leaderboard-list">
               <li>abcdaaaaaa 20</li>
               <li>agwgwaaaaa 17</li>
               <li>abcdaaaaaa 15</li>
@@ -76,6 +76,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripta.js"></script>
   </body>
 </html>
