--- a/name.html
+++ b/name.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Input Name</title>
+    <title>Guess My Number!</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -23,6 +23,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="script.js"></script>
+    <script src="scripta.js"></script>
   </body>
 </html>
